# Home_mcp_server

./: .dockerignore  .env.docker  .gitignore  API.md  DOCKER.md  DOCKER_SUMMARY.md  Dockerfile  MCP_CLIENT_GUIDE.md  MCP_CLIENT_GUIDE_SUMMARY.md  Makefile  OPENAPI.md  OPENAPI_SUMMARY.md  QUICKSTART.md  README.md  demo_gateway.py  docker-compose.yml  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  verify.py
examples/: math_examples.py  rest_api_client.py  visualization_examples.py
mcp_servers/: __init__.py  gateway_server.py  math_server.py  rest_api.py  visualization_server.py
mcp_servers/utils/: __init__.py  base_server.py  math_utils.py  viz_utils.py
scripts/: docker-compose-deploy.sh  docker-deploy.sh  start-rest-api.sh
tests/: test_docker.py  test_servers.py
